--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.3', '8.4', '8.5']
+        php: ['8.3']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,6 +22,7 @@ jobs:
       - name: Install TYPO3 14 dependencies
         run: |
           mkdir -p .Build/.cache
+          echo "start installing deps"
           sudo chmod -R 777 .Build/
           Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
           echo "DONE installing deps"
