--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -24,7 +24,7 @@ jobs:
           mkdir -p .Build/.cache
           echo "start installing deps"
           sudo chmod -R 777 .Build/
-          Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
+          sudo Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
           echo "DONE installing deps"
           mkdir -p .Build/public/typo3temp/var/transien
           sudo chmod -R 777 .
