--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.3']
+        php: ['8.3', '8.4', '8.5']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,14 +22,10 @@ jobs:
       - name: Install TYPO3 14 dependencies
         run: |
           mkdir -p .Build/.cache
-          echo "start installing deps"
-          sudo chmod -R 777 .Build/
           sudo chmod -R 777 .
-          Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
-          echo "DONE installing deps"
-          sudo chmod -R 777 .Build/
-          mkdir -p .Build/public/typo3temp/var/transien
+          Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "update --no-progress --no-interaction"
           sudo chmod -R 777 .
-          sudo chmod -R 777 .Build/
           Build/Scripts/runTests.sh -s acceptance -p ${{ matrix.php }} -t 14
 
+      - name: Run Acceptance Tests
+        run: Build/Scripts/runTests.sh -s acceptance -p ${{ matrix.php }} -t 14
