--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -77,6 +77,7 @@ jobs:
           mkdir -p .Build/.cache
           sudo chmod -R 777 .
           Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "update --no-progress --no-interaction"
+          sudo chmod -R 777 .
 
       - name: Run Acceptance Tests
         run: Build/Scripts/runTests.sh -s acceptance -p ${{ matrix.php }}
